<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geeksworld.jktdvr.activity.MainActivity">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/trans"
        android:orientation="vertical">

        <com.geeksworld.jktdvr.views.MyViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/frag_main0_item_divide_color"></LinearLayout>
        <RadioGroup
            android:id="@+id/main_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_rd0"
                style="@style/RadioBtn"
                android:checked="true"
                android:drawableTop="@drawable/main_radio_se0"
                android:text="@string/main_radio0" />

            <RadioButton
                android:id="@+id/main_rd1"
                style="@style/RadioBtn"
                android:drawableTop="@drawable/main_radio_se1"
                android:text="@string/main_radio1" />

            <RadioButton
                android:id="@+id/main_rd2"
                style="@style/RadioBtn"
                android:drawableTop="@drawable/main_radio_se2"
                android:text="@string/main_radio2" />

            <RadioButton
                android:id="@+id/main_rd3"
                style="@style/RadioBtn"
                android:drawableTop="@drawable/main_radio_se3"
                android:text="@string/main_radio3" />

            <RadioButton
                android:id="@+id/main_rd4"
                style="@style/RadioBtn"
                android:drawableTop="@drawable/main_radio_se4"
                android:text="@string/main_radio4" />
        </RadioGroup>
    </LinearLayout>

</RelativeLayout>
