<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/inTitle"
        layout="@layout/layout_top_navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize18" />

        <EditText
            android:id="@+id/forgot_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@mipmap/login_pass_bg"
            android:hint="@string/hint_phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/textSize15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/forgot_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@mipmap/login_code"
                android:hint="@string/hint_code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="@dimen/textSize15" />

            <TextView
                android:id="@+id/forgot_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_getcode"
                android:gravity="center"
                android:maxEms="6"
                android:minEms="6"
                android:padding="10dp"
                android:text="@string/hint_code" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/toast_pass"
            android:textSize="@dimen/textSize15" />

        <EditText
            android:id="@+id/forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@mipmap/login_code"
            android:hint="@string/forgot_pass_pass0"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/textSize15" />

        <EditText
            android:id="@+id/forgot_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@mipmap/login_code"
            android:hint="@string/forgot_pass_pass1"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/textSize15" />

        <TextView
            android:id="@+id/forgot_sub"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:hint="@string/complete"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />


    </LinearLayout>
</LinearLayout>