<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/inTitle"
        layout="@layout/layout_top_navigation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center">

        <com.geeksworld.jktdvr.views.RoundImageView
            android:id="@+id/login_head"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/mine_head_default" />
    </RelativeLayout>

    <EditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@mipmap/login_pass_bg"
        android:drawableRight="@mipmap/login_phone_icon"
        android:hint="@string/hint_phone"
        android:inputType="phone"
        android:maxLines="1"
        android:nextFocusForward="@+id/login_pass"
        android:padding="10dp"
        android:textSize="@dimen/textSize15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@mipmap/login_pass_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="@dimen/textSize15" />

        <ImageButton
            android:id="@+id/login_pass_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@null"
            android:padding="5dp"
            android:src="@mipmap/login_pass_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_sub"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_shape"
        android:gravity="center"
        android:hint="@string/login"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/login_forgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/login_forgetPass"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/login_phone_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/login_phone_register" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/login_three"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_qq"
            android:layout_marginRight="50dp"
            android:visibility="gone"/>


        <ImageView
            android:id="@+id/login_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/login_wx"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>