<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/inTitle"
        layout="@layout/layout_top_navigation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.geeksworld.jktdvr.views.RoundImageView
                android:id="@+id/login_head"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/mine_head_default" />

            <View
                android:id="@+id/centre"
                android:layout_width="1dp"
                android:layout_height="1dp"
                android:layout_centerInParent="true" />

            <ImageView
                android:id="@+id/login_head_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/centre"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/centre"
                android:src="@mipmap/main_radio00"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@mipmap/login_pass_bg"
            android:drawableRight="@mipmap/login_phone_icon"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="9dp"
            android:textSize="@dimen/textSize15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@mipmap/login_code"
                android:hint="@string/hint_code"
                android:inputType="number"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="@dimen/textSize15" />

            <TextView
                android:id="@+id/login_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/login_getcode"
                android:gravity="center"
                android:maxEms="6"
                android:minEms="6"
                android:padding="10dp"
                android:text="@string/hint_code" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_pass_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@mipmap/login_pass_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/login_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp"
                android:textSize="@dimen/textSize15" />

            <ImageButton
                android:id="@+id/login_pass_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:padding="5dp"
                android:src="@mipmap/login_pass_icon" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/register_binded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="15dp"
                android:text="@string/login_binded" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_sub"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:hint="@string/register"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/agreed"
            android:textSize="@dimen/textSize10" />

        <TextView
            android:id="@+id/login_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_clause"
            android:textColor="@color/login_clause"
            android:textSize="@dimen/textSize10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="/"
            android:textSize="@dimen/textSize10" />

        <TextView
            android:id="@+id/login_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/login_secret"
            android:textColor="@color/login_clause"
            android:textSize="@dimen/textSize10" />
    </LinearLayout>

</LinearLayout>