<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="5dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleTextView"
        android:textSize="@dimen/main_frag0_item_title_textSize"
        android:padding="5dp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/frag_main0_item_title_color"
        android:text="@string/common_test_string_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/show1ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/image_default_4_3"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/show2ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/image_default_4_3"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/show3ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@mipmap/image_default_4_3"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"/>
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/pointTextView"
            android:textSize="@dimen/main_frag0_item_bottom_textSize"
            android:padding="5dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/frag_main0_item_bottom_color"
            android:text="@string/common_test_string_score"/>
        <TextView
            android:id="@+id/scanTextView"
            android:textSize="@dimen/main_frag0_item_bottom_textSize"
            android:padding="5dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/frag_main0_item_bottom_color"
            android:text="@string/common_test_string_scan"/>
        <TextView
            android:id="@+id/timeTextView"
            android:textSize="@dimen/main_frag0_item_bottom_textSize"
            android:padding="5dp"
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/frag_main0_item_bottom_color"
            android:text="@string/common_test_string_time"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="0.5dp"
        android:background="@color/frag_main0_item_divide_color"></LinearLayout>
</LinearLayout>
